# template_imgui_docking_project_app

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  sources.yml  win.yml
cmake/: ezlibs.cmake  glad.cmake  glfw.cmake  imguipack.cmake
src/: app.cpp  app.h  main.cpp
src/backend/: backend.cpp  backend.h
src/frontend/: frontend.cpp  frontend.h  themes.cpp
src/frontend/panes/: console.cpp  console.h
src/frontend/panes/abstract/: apane.h
src/headers/: customImGuiConfig.h  customImGuiFileDialogConfig.h  version.h
src/interfaces/: iapp.h
src/resources/: RobotoMedium.cpp  RobotoMedium.h
